<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <!-- ФРАГМЕНТ МЕДИАТЕКА -->
    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.playlistmaker.presentation.fragments.MediaLibraryFragment"
        android:label="@string/media_library_title"
        tools:layout="@layout/activity_media_library" >
        <!-- ДЕЙСТВИЕ из MediaLibraryFragment в PlaylistDetailsFragment -->
        <action
            android:id="@+id/action_mediaLibraryFragment_to_playlistDetailsFragment"
            app:destination="@id/playlistDetailsFragment" />
        <!-- ДЕЙСТВИЕ из MediaLibraryFragment в CreatePlaylistFragment -->
        <action
            android:id="@+id/action_mediaLibraryFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.presentation.fragments.SearchFragment"
        android:label="@string/poisk"
        tools:layout="@layout/activity_search">
        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.presentation.fragments.SettingsFragment"
        android:label="@string/button_nastroi"
        tools:layout="@layout/activity_settings" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.playlistmaker.presentation.fragments.PlayerFragment"
        android:label="Player">
        <argument
            android:name="TRACK_ID"
            app:argType="integer" />
        <action
            android:id="@+id/action_playerFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.fragments.CreatePlaylistFragment"
        android:label="@string/create_playlist_title"
        tools:layout="@layout/fragment_create_playlist" />

    <!-- ФРАГМЕНТ ДЕТАЛЕЙ ПЛЕЙЛИСТА -->
    <fragment
        android:id="@+id/playlistDetailsFragment"
        android:name="com.example.playlistmaker.presentation.fragments.PlaylistDetailsFragment"
        android:label="@string/playlist_details_title"
        tools:layout="@layout/fragment_playlist_details">
        <!-- Аргумент playlistId -->
        <argument
            android:name="playlistId"
            app:argType="long" />
        <action
            android:id="@+id/action_playlistDetailsFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <!-- НОВОЕ ДЕЙСТВИЕ: из PlaylistDetailsFragment в EditPlaylistFragment -->
        <action
            android:id="@+id/action_playlistDetailsFragment_to_editPlaylistFragment"
            app:destination="@id/editPlaylistFragment" />
    </fragment>

    <!-- НОВЫЙ ФРАГМЕНТ: РЕДАКТИРОВАНИЕ ПЛЕЙЛИСТА -->
    <fragment
        android:id="@+id/editPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.fragments.EditPlaylistFragment"
        android:label="Редактировать"
    tools:layout="@layout/fragment_create_playlist">
    <!-- Аргумент playlistId -->
    <argument
        android:name="playlistId"
        app:argType="long" />
</fragment>

    <!-- ГЛОБАЛЬНОЕ ДЕЙСТВИЕ к созданию плейлиста -->
    <action
        android:id="@+id/action_global_createPlaylistFragment"
        app:destination="@id/createPlaylistFragment" />

</navigation>