<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/otstup_mini"
        android:layout_marginStart="@dimen/otstup_mini"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/knopka_naz"
            android:layout_height="@dimen/knopka_naz"
            android:background="@android:color/transparent"
            android:contentDescription="@string/nazad"
            android:src="@drawable/strelka" />

        <TextView
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/iconka_otstup"
            android:text="@string/button_nastroi"
            android:textSize="@dimen/tekst_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temno_tema"
            android:textSize="@dimen/tekst_size2"
            android:layout_marginStart="@dimen/otstup_big"
            android:layout_marginBottom="21dp"
            android:layout_marginTop="21dp"
            android:layout_weight="1" />

        <Switch
            android:layout_width="56dp"
            android:layout_height="@dimen/knopka_naz"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/otstup_big"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:layout_weight="1"
            android:text="@string/podelitsy"
            android:textSize="@dimen/tekst_size2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            app:srcCompat="@drawable/podelitsy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dly_menu"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:layout_weight="1"
            android:text="@string/poddergka"
            android:textColor="@color/black"
            android:textSize="@dimen/tekst_size2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/podderg"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dly_menu"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/soglahenie"
            android:textSize="@dimen/tekst_size2"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/otstup_big"
            android:layout_marginBottom="21dp"
            android:layout_marginTop="21dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/soglah"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp" />
    </LinearLayout>

</LinearLayout>
