<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/sinii"
    android:orientation="vertical"
   >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"

            android:layout_gravity="start"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#ffffff"
            android:textSize="@dimen/tekst_size"
            android:layout_marginBottom="16dp"

            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <Button
            android:id="@+id/button_poisk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"


            android:layout_weight="1"
            android:backgroundTint="@color/white"

            android:text="@string/button_poisk"
            android:textColor="@color/black"
            android:textSize="@dimen/tekst_size"
            app:icon="@drawable/lupa"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"
            android:textAllCaps="false"
            android:layout_marginHorizontal="16dp"
            />

        <Button
            android:id="@+id/button_musika"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"

            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_musika"
            android:textColor="@color/black"
            android:textSize="@dimen/tekst_size"
            app:icon="@drawable/muzika"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"
            android:textAllCaps="false"
            android:layout_marginHorizontal="16dp"/>


        <Button
            android:id="@+id/button_nastroi"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"

            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_nastroi"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/tekst_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/nastroi"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            android:layout_marginBottom="28dp"
            android:layout_marginHorizontal="16dp"/>

    </LinearLayout>






</LinearLayout>
