<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Кнопка создания плейлиста - ВСЕГДА видима -->
    <Button
        android:id="@+id/create_playlist_button"
        style="@style/obnovit_rnopka"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@null"
        android:gravity="center"
        android:text="@string/create_playlist"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Заглушка для пустого состояния -->
    <ImageView
        android:id="@+id/placeholder_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/placeholder_description"
        android:src="@drawable/light_mode"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/placeholder"
        style="@style/text_zagluhka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_playlists_placeholder"
        android:textSize="19sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_image" />

    <!-- RecyclerView для списка плейлистов -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlists_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_playlist_button"
        tools:listitem="@layout/item_playlist" />

</androidx.constraintlayout.widget.ConstraintLayout>